--- a/wedding_website/_sass/header.scss
+++ b/wedding_website/_sass/header.scss
@@ -1,15 +1,33 @@
 /* header settings */
 
-.site-header {border-bottom: 0;
+.site-header {border-bottom: 0; position: fixed; top: 0; left: 0; width: 100vw;
+
+    --header-height: 48px; height: var(--header-height); z-index: 9;
+
     &::before {display: block; width: 100%; height: 8px; background: var(--colorLine); content: '';}
     .wrapper {display: flex; align-items: center; justify-content: center;}
+
+    a {
+        &:hover, &:focus {
+            .logo-monogram {}
+        }
+    }
+
+    @media (min-width: 1200px) {--header-height: 72px;}
+
 }
 
-.logo-monogram {width: 32px; height: auto;
 
-    @media (min-width: 1600px) {width: 48px;}
+
+.logo-monogram {width: 48px; height: auto; transition: 1s all ease-in-out;
+
+    @media (min-width: 1200px) {width: 64px;}
+
+    .content-page & {filter: invert(1);}
 
 }
+
+
 
 
 
