--- a/wedding_website/_includes/big-links.html
+++ b/wedding_website/_includes/big-links.html
@@ -2,13 +2,35 @@
 
     <ul>
 
-        <li><a href="#">Our Story</a></li>
-        <li><a href="#">The Venue</a></li>
-        <li><a href="#">Lodging</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Music</a></li>
-        <li><a href="#">RSVP <span class="coming-soon">Coming Soon</span></a></li>
-        <li><a href="#">Registry</a></li>
+        <li><a href="/our-story" data-section="our-story">
+            <div class="big-links__linktext">Our Story</div>
+            {% include linklist--ourstory.html %}
+        </a>
+
+        </li>
+        <li><a href="/venue/">
+            <div class="big-links__linktext">The Venue</div>
+            {% include linklist--venue.html %}
+        </a></li>
+        <li><a href="#">
+            <div class="big-links__linktext">Lodging <span class="coming-soon">Coming Soon</span></div>
+        </a></li>
+        <li><a href="#">
+            <div class="big-links__linktext">Gallery <span class="coming-soon">Coming Soon</span></div>
+        </a></li>
+        <li><a href="#">
+            <div class="big-links__linktext">Party <span class="coming-soon">Coming Soon</span></div>
+        </a></li>
+        <li><a href="#">
+            <div class="big-links__linktext">Music <span class="coming-soon">Coming Soon</span></div>
+        </a></li>
+        <li><a href="#">
+            <div class="big-links__linktext">RSVP <span class="coming-soon">Coming Soon</span></div>
+        </a></li>
+        <li><a href="#">
+            <div class="big-links__linktext">Registry<span class="coming-soon">Coming Soon</span></div>
+        </a>
+        </li>
 
 
     </ul>
