--- a/wedding_website/_includes/header.html
+++ b/wedding_website/_includes/header.html
@@ -4,7 +4,7 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-      <img class="logo-monogram" src="{{ site.logo }}" />
+      <img class="logo-monogram" src="{{ site.logo | relative_url }}" />
     </a>
     {%- if page_paths -%}
     {% comment %} Remove text menu nav
