--- a/wedding_website/_layouts/page.html
+++ b/wedding_website/_layouts/page.html
@@ -3,9 +3,11 @@ layout: default
 ---
 <article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+  <header class="cover">
+    <img src="{{ page.cover | relative_url }}" {% if page.cover_align %}class="{{ page.cover_align }}"{% endif %} />
+    <h1 class="">{{ page.title | escape }}</h1>
   </header>
+
 
   <div class="post-content">
     {{ content }}
