--- a/wedding_website/_sass/components.scss
+++ b/wedding_website/_sass/components.scss
@@ -20,12 +20,14 @@
         gap: 0; 
     }
 
-    .marquee-content {display: flex; justify-content: space-around; min-width: 66.6667%; align-items: center; flex-shrink: 0; 
+    .marquee-content {display: flex; justify-content: space-around; min-width: 100%; align-items: center; flex-shrink: 0; 
         animation: date-marquee 9s linear infinite;}
 
-    span {text-transform: uppercase; letter-spacing: 1px; display: flex; flex: 0 0 auto; margin-right: $spacing-unit/2; align-items: center;
+    span {text-transform: uppercase; letter-spacing: 1px; display: flex; flex: 0 0 auto; margin-right: $spacing-unit/2; align-items: center; font-size: 1.5rem;
     
         &::after {content: " "; display: inline-flex; height: 1px; background: var(--colorLine); width: 64px; margin-left: $spacing-unit/2;}
+
+        @include media-query($on-laptop) {font-size: 1rem;}
     }
 
 }
@@ -55,17 +57,37 @@
     width: 100vw; margin-left: -$spacing-unit;
 
     ul {margin-left: 0;}
-    li {border-bottom: 1px solid var(--colorLine); margin: 0 0; list-style: none; padding-top: 2rem;
+    li {border-bottom: 1px solid var(--colorLine); margin: 0 0; list-style: none; position: relative;  padding-top: 0;
+
+
+        .linklist-gallery {position: absolute; top: 0; left: 0; display: flex; height: 100%; width: 100%; transition: .5s all ease-in-out; opacity: 0; margin-left: calc((var(--spacingUnit)) * -1);
+            img {flex: 1 0 auto; object-fit: cover; z-index: -1; opacity: .32;}
+
+            &.show {opacity: 1;}
+
+        }
     
-        a {font-family: var(--fontOgg); font-style: italic; font-size: 5rem; color: var(--colorContentPrimary); text-transform: lowercase; position: relative; margin-left: $spacing-unit; margin-right: auto; width: max-content; display: flex; align-items: first baseline; justify-content: flex-start; bottom: -2.5rem;
+        a {
+            
+            .big-links__linktext {display: flex; align-items: flex-start; align-items: first baseline;bottom: -2.5rem; z-index: 1; position: relative;width: max-content; }
+            
+            font-family: var(--fontOgg); font-style: italic; font-size: 5rem; color: var(--colorContentPrimary); text-transform: lowercase; position: relative; margin-left: $spacing-unit; margin-right: auto; display: flex; align-items: first baseline; justify-content: flex-start; width: 100%; height: 100%; bottom: 0;
         
-            &:hover, &:focus {text-decoration: none;}
+            &:hover, &:focus {text-decoration: none;
+            
+                .linklist-gallery {opacity: 1;}
+
+            }
 
         }
 
         &:nth-of-type(even) {
+
+            .linklist-gallery {margin-left: 0;}
             a {margin-left: auto; margin-right: $spacing-unit; justify-content: flex-end;}
         }
+
+
 
     }
 
@@ -83,8 +105,12 @@
         margin-left: -$spacing-unit / 2;
 
         li {
-            a {font-size: 5rem; margin-left: $spacing-unit / 2; margin-right: auto; bottom: -2.5rem;}
+
+            .linklist-gallery {margin-left: calc((var(--spacingUnit) / 2) * -1);}
+
+            a {font-size: 5rem; margin-left: $spacing-unit / 2; margin-right: auto; bottom: 0rem;}
             &:nth-of-type(even) {
+
                 a {margin-right: $spacing-unit / 2; margin-left: auto;}
             }
         }
@@ -93,7 +119,11 @@
     @include media-query($on-palm) {
 
         li {
-            a {font-size: 3rem; bottom: -1.5rem;}
+            .linklist-gallery {top: 0rem;}
+            a {font-size: 3rem; bottom: 0rem;
+            
+                .big-links__linktext {bottom: -1.5rem;}
+            }
         }
         .coming-soon {order: -1;}
     }
