--- a/wedding_website/_sass/layout.scss
+++ b/wedding_website/_sass/layout.scss
@@ -174,8 +174,10 @@
  * Page content
  */
 .page-content {
-  padding: $spacing-unit 0;
+  padding: 0px 0;
   flex: 1;
+
+  @media (min-width: 1200px) {padding: 0px 0}
 }
 
 .page-heading {
@@ -206,6 +208,30 @@
 }
 
 
+.page-content {
+  article {
+    header {min-height: 300px; height: 35vh; position: relative; width: 100vw; margin-left: calc(var(--spacingUnit) * -1);
+      h1 {position: absolute; bottom: -2rem; left: 2rem; margin-bottom: 0;
+        @media (min-width: 1200px) {left: 4rem;}
+      }
+
+      img {position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1; opacity: .7;
+      
+        &.top-center {object-position: center top;}
+
+      }
+
+      @include media-query($on-laptop) {margin-left: calc((var(--spacingUnit) / 2) * -1);}
+
+      &::before {content: ''; display: block; width: 100%; height: 100%; top: 0; left: 0; background: var(--colorDark); z-index: -1; position: absolute;}
+
+    } // end header
+  } // end article
+} // end .page-content
+
+
+
+
 
 /**
  * Posts
@@ -226,6 +252,11 @@
 
 .post-content {
   margin-bottom: $spacing-unit;
+
+  margin-top: calc(var(--spacingUnit) * 2);
+
+  max-width: 1168px;
+
 
   h2 {
     @include relative-font-size(2);
@@ -250,4 +281,13 @@
       @include relative-font-size(1.125);
     }
   }
+
+  p {max-width: 900px; margin: 0 auto;}
+}
+
+
+.home {
+  padding-top: calc(48px + 2rem);
+
+  @media (min-width:1200px) {padding-top: calc(72px + 2rem);}
 }
