I made a menu! Also slight styling tweaks and homepage 'big link' updates

--- a/wedding_website/_includes/big-links.html
+++ b/wedding_website/_includes/big-links.html
@@ -16,7 +16,7 @@
             <div class="big-links__linktext">Lodging <span class="coming-soon">Coming Soon</span></div>
         </a></li>
         <li><a href="#">
-            <div class="big-links__linktext">Gallery <span class="coming-soon">Coming Soon</span></div>
+            <div class="big-links__linktext">Things to do <span class="coming-soon">Coming Soon</span></div>
         </a></li>
         <li><a href="#">
             <div class="big-links__linktext">Party <span class="coming-soon">Coming Soon</span></div>
