--- a/wedding_website/_sass/header.scss
+++ b/wedding_website/_sass/header.scss
@@ -1,11 +1,11 @@
 /* header settings */
 
-.site-header {border-bottom: 0; position: fixed; top: 0; left: 0; width: 100vw;
+.site-header {border-bottom: 0; position: fixed; top: 0; left: 0; width: 100vw; transition: .15s all ease-in-out;
 
     --header-height: 48px; height: var(--header-height); z-index: 9;
 
     &::before {display: block; width: 100%; height: 8px; background: var(--colorLine); content: '';}
-    .wrapper {display: flex; align-items: center; justify-content: center;}
+    .wrapper {display: flex; align-items: center; justify-content: center; position: relative; z-index: 9;}
 
     a {
         &:hover, &:focus {
@@ -14,6 +14,10 @@
     }
 
     @media (min-width: 1200px) {--header-height: 72px;}
+
+
+    &.header-bg {background: color-mix(in srgb, var(--colorBackground) 80%, transparent); 
+        backdrop-filter: blur(4px);}
 
 }
 
@@ -25,7 +29,44 @@
 
     .content-page & {filter: invert(1);}
 
+    &.reversed {filter: invert(1);}
+
 }
+
+.hamburger {
+    position: absolute; width: 16px; height: 16px; left: 1rem;
+
+    &::after {content: 'Menu'; opacity: 0; color: var(--colorContentPrimary); margin-top: 2px; padding-left: 36px; transition: .15s all ease-in-out; position: absolute; top: -4px; font-family: var(--fontOgg); text-transform: lowercase; font-style: italic; pointer-events: none; transform: translateX(-36px);} // end ::after
+
+    .patty {display: block; border-radius: 256px; height: 2px; width: 24px; position: absolute; background: var(--colorContentPrimary); transition: .15s all ease-in-out;
+    
+        &.top {top: 4px; transform: translateY(0);}
+        &.bottom {top: 12px; transform: translateY(0);}
+    } // end default patty
+
+    &.hovered {
+        cursor: pointer; pointer-events: all;
+        &::after {opacity: 1;  transform: translateX(0px);}
+        .patty {
+            &.top {transform: translateY(-2px);}
+            &.bottom {transform: translateY(2px);}
+        }
+    } // end hovered
+
+    &.opened {
+        &::after {content: 'Close'; color: var(--colorLight);}
+        .patty {
+            background: var(--colorLight);
+            &.top {transform: translateY(4px) rotate(-45deg);}
+            &.bottom {transform: translateY(-4px) rotate(45deg);}
+        }
+    } // end opened
+
+    @media (min-width: 767px) {
+        left: 2rem;
+    }
+
+} // end hamburger
 
 
 
