--- a/wedding_website/_sass/main.scss
+++ b/wedding_website/_sass/main.scss
@@ -38,7 +38,7 @@
     --fontOgg: "Ogg", "Georgia", serif;
     --fontRosella: "rosella-deco", sans-serif;
     --fontMain: '"Libre Franklin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"';
-    --fontNumans: '"Numans", "Libre Franklin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";'
+    --fontNumans: '"Numans", "Libre Franklin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";';
 
     --colorBackground: var(--colorGrey0);
     --colorContentPrimary: var(--colorGrey1000);
