Adding tooltip functionality and beginning to add page content block syntax

--- a/wedding_website/_layouts/page.html
+++ b/wedding_website/_layouts/page.html
@@ -10,7 +10,16 @@ layout: default
 
 
   <div class="post-content">
+
+    {% for block in page.blocks %}
+      {% if block.content %}
+      {{ block.content | markdownify }}  
+      {% endif %}
+    {% endfor %}
+
     {{ content }}
   </div>
 
 </article>
+
+<script src="../assets/js/content-pages.js"></script>
