--- a/wedding_website/_sass/layout.scss
+++ b/wedding_website/_sass/layout.scss
@@ -211,8 +211,8 @@
 .page-content {
   article {
     header {min-height: 300px; height: 35vh; position: relative; width: 100vw; margin-left: calc(var(--spacingUnit) * -1);
-      h1 {position: absolute; bottom: -2rem; left: 2rem; margin-bottom: 0;
-        @media (min-width: 1200px) {left: 4rem;}
+      h1 {position: absolute; top: 50%; left: 50%; margin-bottom: 0; transform: translateX(-50%) translateY(-50%);
+        @media (min-width: 1200px) {}
       }
 
       img {position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1; opacity: .7;
@@ -226,7 +226,29 @@
       &::before {content: ''; display: block; width: 100%; height: 100%; top: 0; left: 0; background: var(--colorDark); z-index: -1; position: absolute;}
 
     } // end header
+
+    p {margin-bottom: 1rem; position: relative;
+
+      a {
+        text-decoration: underline; text-decoration-color: var(--colorContentPrimary); color: var(--colorContentPrimary); transition: .15s all ease-in-out;
+        &[data-tooltip] {position: relative;}
+        &:hover, &:focus {color: var(--colorTerraCotta); text-decoration-color: var(--colorTerraCotta);}
+
+      }
+
+      .tooltip {position: fixed;top: -2rem; left: -2rem; max-width: 320px; box-shadow: 4px 4px 16px rgba(64,64,64,.32); border-radius: 8px; font-size: 0.625rem; padding: 8px; background: var(--colorSage); color: var(--colorLight); z-index: 2;}
+
+      @media (min-width: 767px) {
+        margin-bottom: 2rem;
+      } // end 767 mq
+      @media (min-width: 1600px) {
+        line-height: 1.8; font-size: 1.125rem;
+      }
+    }
+
   } // end article
+
+
 } // end .page-content
 
 
@@ -291,3 +313,6 @@
 
   @media (min-width:1200px) {padding-top: calc(72px + 2rem);}
 }
+
+
+
