--- a/wedding_website/_sass/main.scss
+++ b/wedding_website/_sass/main.scss
@@ -40,13 +40,14 @@
     --fontMain: '"Libre Franklin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"';
     --fontNumans: '"Numans", "Libre Franklin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";';
 
-    --colorBackground: var(--colorGrey0);
+    --colorBackground: var(--colorGrey25);
+    --colorBackgroundSecondary: var(--colorGrey100);
     --colorContentPrimary: var(--colorGrey1000);
     --colorContentSecondary: var(--colorGrey500);
-    --colorContentPrimaryB: var(--colorGrey0);
+    --colorContentPrimaryB: var(--colorGrey25);
     --colorLine: var(--colorGrey1000);
 
-    --colorLight: var(--colorGrey0);
+    --colorLight: var(--colorGrey25);
     --colorDark: var(--colorGrey1000);
 
 
