ch-ch-ch-ch-changes

--- a/wedding_website/_includes/big-links.html
+++ b/wedding_website/_includes/big-links.html
@@ -9,7 +9,7 @@
 
         </li>
         <li><a href="/venue/">
-            <div class="big-links__linktext">The Venue</div>
+            <div class="big-links__linktext">When &amp; Where</div>
             {% include linklist--venue.html %}
         </a></li>
         <li><a href="#">
