--- a/wedding_website/_includes/menu.html
+++ b/wedding_website/_includes/menu.html
@@ -7,7 +7,7 @@
         </li>
 
         <li>
-            <a href="/venue">The Venue</a>
+            <a href="/venue">When &amp; Where</a>
         </li>
 
         <li class="inactive">
