--- a/wedding_website/_sass/header.scss
+++ b/wedding_website/_sass/header.scss
@@ -2,7 +2,7 @@
 
 .site-header {border-bottom: 0; position: fixed; top: 0; left: 0; width: 100vw; transition: .15s all ease-in-out;
 
-    --header-height: 48px; height: var(--header-height); z-index: 9;
+    height: var(--header-height); z-index: 9;
 
     &::before {display: block; width: 100%; height: 8px; background: var(--colorLine); content: '';}
     .wrapper {display: flex; align-items: center; justify-content: center; position: relative; z-index: 9;}
@@ -13,7 +13,6 @@
         }
     }
 
-    @media (min-width: 1200px) {--header-height: 72px;}
 
 
     &.header-bg {background: color-mix(in srgb, var(--colorBackground) 80%, transparent); 
@@ -27,9 +26,15 @@
 
     @media (min-width: 1200px) {width: 64px;}
 
-    .content-page & {filter: invert(1);}
-
     &.reversed {filter: invert(1);}
+
+    .content-page & {filter: invert(1);}
+    .content-page .header-bg & {filter: invert(0);
+
+
+        &.reversed {filter: invert(1);}
+    }
+
 
 }
 
@@ -49,6 +54,11 @@
         .patty {background: var(--colorLight);}
     } // end content-page stylings
 
+    .content-page .header-bg & {
+        &::after {color: var(--colorContentPrimary);}
+        .patty {background: var(--colorContentPrimary);}
+    }
+
     &.hovered {
         cursor: pointer; pointer-events: all;
         &::after {opacity: 1;  transform: translateX(0px);}
@@ -65,6 +75,12 @@
             &.top {transform: translateY(4px) rotate(-45deg);}
             &.bottom {transform: translateY(-4px) rotate(45deg);}
         }
+
+        .content-page .header-bg & {
+            &::after {color: var(--colorLight);}
+            .patty {background: var(--colorLight);}
+        }
+
     } // end opened
 
     @media (min-width: 767px) {
