--- a/wedding_website/_sass/layout.scss
+++ b/wedding_website/_sass/layout.scss
@@ -213,6 +213,14 @@
     header {min-height: 300px; height: 35vh; position: relative; width: 100vw; margin-left: calc(var(--spacingUnit) * -1);
       h1 {position: absolute; top: 50%; left: 50%; margin-bottom: 0; transform: translateX(-50%) translateY(-50%);
         @media (min-width: 1200px) {}
+
+        &.whenwhere {
+          --halfHeaderHeight: calc((var(--header-height) / 2) * -1);
+
+          transform: translateX(-50%) translateY(var(--halfHeaderHeight));
+
+        }
+
       }
 
       img {position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1; opacity: .7;
@@ -244,6 +252,16 @@
       @media (min-width: 1600px) {
         line-height: 1.8; font-size: 1.125rem;
       }
+    }
+
+    .heading-wrapper {max-width: 900px; margin: 0 auto 2rem; text-align: center; 
+      h2 {margin-left: -3vw; margin-bottom: 0; line-height: 1;}
+      p {margin-right: -3vw; margin-top: 0; text-transform: uppercase; color: var(--colorContentSecondary); letter-spacing: 1px;}
+
+      @media (min-width: 767px) {
+        margin-bottom: 4rem;
+      }
+
     }
 
   } // end article
