--- a/wedding_website/_sass/main.scss
+++ b/wedding_website/_sass/main.scss
@@ -2,10 +2,10 @@
 
 @font-face {
     font-family: 'Ogg';
-    src: url('../assets/fonts/ogg/Ogg-Roman.woff2') format('woff2'),
+    src:url('../assets/fonts/ogg/Ogg-Roman.svg#Ogg-Roman') format('svg'),
+        url('../assets/fonts/ogg/Ogg-Roman.woff2') format('woff2'),
         url('../assets/fonts/ogg/Ogg-Roman.woff') format('woff'),
-        url('../assets/fonts/ogg/Ogg-Roman.ttf') format('truetype'),
-        url('../assets/fonts/ogg/Ogg-Roman.svg#Ogg-Roman') format('svg');
+        url('../assets/fonts/ogg/Ogg-Roman.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -13,10 +13,10 @@
 
 @font-face {
     font-family: 'Ogg';
-    src: url('../assets/fonts/ogg/Ogg-Italic.woff2') format('woff2'),
+    src:url('../assets/fonts/ogg/Ogg-Italic.svg#Ogg-Italic') format('svg'), 
+        url('../assets/fonts/ogg/Ogg-Italic.woff2') format('woff2'),
         url('../assets/fonts/ogg/Ogg-Italic.woff') format('woff'),
-        url('../assets/fonts/ogg/Ogg-Italic.ttf') format('truetype'),
-        url('../assets/fonts/ogg/Ogg-Italic.svg#Ogg-Italic') format('svg');
+        url('../assets/fonts/ogg/Ogg-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -42,21 +42,25 @@
 
     --colorBackground: var(--colorGrey25);
     --colorBackgroundSecondary: var(--colorGrey100);
-    --colorContentPrimary: var(--colorGrey1000);
+    --colorContentPrimary: var(--colorGrey900);
     --colorContentSecondary: var(--colorGrey500);
     --colorContentPrimaryB: var(--colorGrey25);
-    --colorLine: var(--colorGrey1000);
+    --colorLine: var(--colorGrey900);
 
     --colorLight: var(--colorGrey25);
-    --colorDark: var(--colorGrey1000);
+    --colorDark: var(--colorGrey900);
 
 
     --spacingUnit: 32px;
 
+    --header-height: 48px; 
+
+    @media (min-width: 1200px) {--header-height: 72px;}
+
 }
 
 
-// html, body {overflow-x: hidden;}
+body {overflow-x: hidden;}
 
 body {background: var(--colorBackground);}
 
