Safari fixes round one of a million

--- a/wedding_website/_includes/big-links.html
+++ b/wedding_website/_includes/big-links.html
@@ -12,22 +12,22 @@
             <div class="big-links__linktext">When &amp; Where</div>
             {% include linklist--venue.html %}
         </a></li>
-        <li><a href="#">
+        <li><a href="#" class="disabled">
             <div class="big-links__linktext">Lodging <span class="coming-soon">Coming Soon</span></div>
         </a></li>
-        <li><a href="#">
+        <li><a href="#" class="disabled">
             <div class="big-links__linktext">Things to do <span class="coming-soon">Coming Soon</span></div>
         </a></li>
-        <li><a href="#">
+        <li><a href="#" class="disabled">
             <div class="big-links__linktext">Party <span class="coming-soon">Coming Soon</span></div>
         </a></li>
-        <li><a href="#">
+        <li><a href="#" class="disabled">
             <div class="big-links__linktext">Music <span class="coming-soon">Coming Soon</span></div>
         </a></li>
-        <li><a href="#">
+        <li><a href="#" class="disabled">
             <div class="big-links__linktext">RSVP <span class="coming-soon">Coming Soon</span></div>
         </a></li>
-        <li><a href="#">
+        <li><a href="#" class="disabled">
             <div class="big-links__linktext">Registry<span class="coming-soon">Coming Soon</span></div>
         </a>
         </li>
