--- a/wedding_website/_sass/main.scss
+++ b/wedding_website/_sass/main.scss
@@ -37,8 +37,8 @@
 
     --fontOgg: "Ogg", "Georgia", serif;
     --fontRosella: "rosella-deco", sans-serif;
-    --fontMain: '"Libre Franklin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"';
-    --fontNumans: '"Numans", "Libre Franklin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";';
+    --fontMain: "Libre Franklin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --fontNumans: "Numans", "Libre Franklin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";;
 
     --colorBackground: var(--colorGrey25);
     --colorBackgroundSecondary: var(--colorGrey100);
