--- a/wedding_website/_sass/menu.scss
+++ b/wedding_website/_sass/menu.scss
@@ -1,6 +1,9 @@
-.main-menu {background: color-mix(in srgb, var(--colorDark) 90%, transparent); color: var(--colorLight);
+.main-menu {background: rgba(12,12,13, 0.9); 
+    // background: color-mix(in srgb, var(--colorDark) 90%, transparent); 
+    
+    color: var(--colorLight);
 
-    position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; display: flex; align-items: center; justify-content: center; flex-direction: column; backdrop-filter: blur(8px); z-index: 8;
+    position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; display: flex; align-items: center; justify-content: center; flex-direction: column; -webkit-backdrop-filter: blur(8px); backdrop-filter: blur(8px); z-index: 8;
 
     transform: translateY(-100vh); transition: .3s all ease-in-out;
 
