more mobile and style updates and making it just nice enough for people to actually see

--- a/wedding_website/_includes/big-links.html
+++ b/wedding_website/_includes/big-links.html
@@ -19,7 +19,7 @@
             <div class="big-links__linktext">Things to do <span class="coming-soon">Coming Soon</span></div>
         </a></li>
         <li><a href="#" class="disabled">
-            <div class="big-links__linktext">Party <span class="coming-soon">Coming Soon</span></div>
+            <div class="big-links__linktext">Wedding Party <span class="coming-soon">Coming Soon</span></div>
         </a></li>
         <li><a href="#" class="disabled">
             <div class="big-links__linktext">Music <span class="coming-soon">Coming Soon</span></div>
