--- a/wedding_website/_sass/menu.scss
+++ b/wedding_website/_sass/menu.scss
@@ -9,7 +9,7 @@
 
     &.opened {transform: translateY(0);}
 
-    ul {margin-left: 0; text-align: center; columns: 1; column-gap: 4vw;
+    ul {margin-left: 0; text-align: center; columns: 1; column-gap: 4vw; padding-top: var(--header-height);
 
         &:before {content: ''; width: 64px; height: 4px; background: var(--colorLight);}
     
@@ -39,8 +39,12 @@
 
             &.inactive {
                 a {
-                    opacity: .24; cursor: default; text-decoration: line-through;
-                    &:hover, &:focus {color: var(--colorLight);}
+                    opacity: .24; cursor: default; text-decoration: line-through; display: none;
+                    &:hover, &:focus {color: var(--colorLight); cursor: default; pointer-events: none; 
+                    
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: initial;
+                    }
                 }
             } // end li.inactive
 
