--- a/wedding_website/_includes/menu.html
+++ b/wedding_website/_includes/menu.html
@@ -10,12 +10,16 @@
             <a href="/venue">When &amp; Where</a>
         </li>
 
-        <li class="inactive">
-            <a>Lodging</a>
+        <li>
+            <a href="/lodging/">Lodging</a>
         </li>
 
-        <li class="inactive">
-            <a>Things to do</a>
+        <li>
+            <a href="/travel/">Travel</a>
+        </li>
+{% comment %}
+        <li>
+            <a href="/things-to-do/">Things to do</a>
         </li>
 
         <li class="inactive">
@@ -33,7 +37,7 @@
         <li class="inactive">
             <a>Registry</a>
         </li>
-
+{% endcomment %}
 
     </ul>
 
