--- a/wedding_website/_sass/layout.scss
+++ b/wedding_website/_sass/layout.scss
@@ -228,6 +228,7 @@
       img {position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1; opacity: .7;
       
         &.top-center {object-position: center top;}
+        &.bottom-center {object-position: center bottom;}
 
       }
 
@@ -267,6 +268,30 @@
       }
 
     }
+
+    h2 {
+      &.city {margin: 1rem auto; max-width: 746px; color: var(--colorContentSecondary);
+      
+        @media (min-width: 900px) {margin: 4rem auto 2rem;}
+
+      }
+    }
+
+    .hotel {max-width: 740px; margin: 1rem auto 2rem;
+
+      @media (min-width: 768px) {margin: 2rem auto 4rem;}
+    
+      p {margin-bottom: 1rem;}
+      .address {display: block; margin-top: 8px;
+       a {margin-left: 8px;}
+      }
+
+    }
+
+    img {
+      &.article-image {width: 100%; max-width: 1120px; margin: 0rem auto; max-height: 400px; object-fit: cover;}
+    }
+
 
   } // end article
 
@@ -349,3 +374,25 @@
 
 
 
+.map {max-width: 300px; margin: 1rem auto; display: block;
+
+  .road {fill: var(--colorContentPrimary);}
+  .place {fill: var(--colorContentPrimary);
+   &.valley-club {fill: var(--colorTerraCotta);}
+  }
+
+} // end map
+
+.atlas {
+  max-width: 500px; margin: 1rem auto; display: block;
+
+  .state-line, .road {fill: var(--colorContentPrimary);}
+  .interstate-number {fill: var(--colorBackground);}
+  .city-name {fill: var(--colorContentPrimary);}
+  .sun-valley {fill: var(--colorTerraCotta);}
+
+  @media (min-width: 767px) {
+    margin-top: 4rem;
+  }
+
+} // end atlas
