--- a/wedding_website/_sass/main.scss
+++ b/wedding_website/_sass/main.scss
@@ -26,6 +26,11 @@
     --colorSage: #8F9E9C;
     --colorTerraCotta: #DE8760; 
 
+    --colorShallot: #F0EAF1;
+    --colorPlum: #6A4860;
+    --colorGrape: #8F778C;
+    --colorRoseGold: #D5B5A8;
+
     --colorGrey0: #FFFFFF;
     --colorGrey25: #FAFAFA;
     --colorGrey100: #F5F5F5;
