--- a/wedding_website/_sass/components.scss
+++ b/wedding_website/_sass/components.scss
@@ -72,11 +72,12 @@
             
             --fontSize: 5rem;
 
+            
+
             .big-links__linktext {display: flex; align-items: flex-start; align-items: first baseline;bottom: -2rem; z-index: 1; position: relative;width: max-content; }
             
             font-family: var(--fontOgg); font-style: italic; font-size: var(--fontSize); color: var(--colorContentPrimary); text-transform: lowercase; position: relative; margin-left: $spacing-unit; margin-right: auto; display: flex; align-items: first baseline; justify-content: flex-start; width: 100%; height: 100%; bottom: 0;
         
-
             /* appear vertically centered in Firefox */
             @-moz-document url-prefix() {
                 .big-links__linktext {bottom: -2.5rem;}
@@ -99,7 +100,9 @@
             .linklist-gallery {margin-left: 0;}
 
             @media (min-width: 767px) {
-                a {margin-left: auto; margin-right: $spacing-unit; justify-content: flex-end;}
+                a {margin-left: auto; margin-right: $spacing-unit; justify-content: flex-end;
+                    &[data-name=travel] {padding-right: 4rem;}
+                }
             }
 
         }
